--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         });
 
         var georssLayer = new google.maps.KmlLayer({
-          url: 'http://api.flickr.com/services/feeds/geo/?g=322338@N20&lang=en-us&format=feed-georss'
+          url: 'http://www.nhc.noaa.gov/index-at.xml'
         });
         georssLayer.setMap(map);
       }
