--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         });
 
         var georssLayer = new google.maps.KmlLayer({
-          url: 'http://www.nhc.noaa.gov/index-at.xml'
+          url: 'http://www.nhc.noaa.gov/gis-at.xml'
         });
         georssLayer.setMap(map);
       }
